@@ -1,4 +1,5 @@
 control
 copyright
+changelog
 lcd-daemon.dsc
 debian.tar.gz
